# odamex

./: .clang-format  .dockerignore  .gitattributes  .gitignore  .gitmodules  .travis.yml  3RD-PARTY-LICENSES  CHANGELOG  CMakeLists.txt  Doxyfile  MAINTAINERS  Makefile  Makefile.win  README  README-32bpp  README.md  TODO  appveyor.yml  appveyor_after_build.ps1  appveyor_before_build.ps1  astylerc  ci-artifact-odalaunch.ps1  ci-artifact-x32.ps1  ci-artifact.ps1  ci-artifact.sh  ci-build-32bit.ps1  ci-build-centos.sh  ci-build-mingw.ps1  ci-build-odalaunch.ps1  ci-build.ps1  ci-build.sh  ci-centos.Dockerfile  force_retest  index.md  odamex-installed.txt  odamex-vc9.sln  odamex.dsw  odamex.wad  odamex.workspace  odasrv.cfg  (+6 more)
ag-odalaunch/: CMakeLists.txt  Makefile  ag-odalaunch.sln  ag-odalaunch.vcproj
ag-odalaunch/Xbox/: ag-odalaunch.sln  ag-odalaunch.vcproj  xbox_api.h  xbox_main.cpp  xbox_main.h
ag-odalaunch/res/: Info.plist  TitleImage.xbx  build.bat  build.sh
ag-odalaunch/src/: agar_mutex.h  agar_mutex_factory.h  agol_about.cpp  agol_about.h  agol_dirsel.cpp  agol_dirsel.h  agol_main.cpp  agol_main.h  agol_manual.cpp  agol_manual.h  agol_settings.cpp  agol_settings.h  agol_solo.cpp  agol_solo.h  event_handler.cpp  event_handler.h  game_command.cpp  game_command.h  gui_config.cpp  gui_config.h  icons.h  main.cpp  net_io.cpp  net_io.h  net_packet.cpp  net_packet.h  oda_thread.h  typedefs.h
client/: CMakeLists.txt
client/cardboard/: Makefile  cardboard.dsp  cardboard.dsw  draw16.cpp  draw32.cpp  draw8.cpp  error.cpp  error.h  light.h  main.cpp  mapdata.cpp  mapdata.h  matrix.h  pixelmath.h  rect.cpp  rect.h  render.cpp  render.h  vblit.cpp  vectors.h  video.cpp  video.h  visplane.cpp  visplane.h
client/fluid/: boot.fl
client/gui/: gui_boot.cpp  gui_boot.h  gui_common.cpp  gui_common.h  gui_resource.h  icon_odamex_128.png.cpp
client/psvita/: debugScreen.h  i_network.cpp  i_psvita.cpp  i_psvita.h
client/sdl/: client.cbp  client.depend  client.dsp  client.dsw  client.layout  client.rc  client.rc.in  hardware.cpp  hardware.h  i_crash.cpp  i_glrender.cpp  i_glshader.cpp  i_glvideo.cpp  i_glvideo.h  i_gui.cpp  i_gui.h  i_http.cpp  i_http.h  i_icon.cpp  i_icon.h  i_input.cpp  i_input.h  i_input_sdl12.cpp  i_input_sdl12.h  i_input_sdl20.cpp  i_input_sdl20.h  i_main.cpp  i_midi.cpp  i_midi.h  i_music.cpp  i_music.h  i_musicsystem.cpp  i_musicsystem.h  i_musicsystem_au.cpp  i_musicsystem_au.h  i_musicsystem_portmidi.cpp  i_musicsystem_portmidi.h  i_musicsystem_sdl.cpp  i_musicsystem_sdl.h  i_musicsystem_winmm.cpp  (+24 more)
client/src/: am_map.cpp  am_map.h  c_bind.cpp  c_bind.h  c_cmds.cpp  c_console.cpp  c_console.h  c_platformkeys.cpp  c_platformkeys.h  cl_battle.cpp  cl_battle.h  cl_connect.cpp  cl_connect.h  cl_connection.cpp  cl_connection.h  cl_ctf.cpp  cl_ctf.h  cl_cvarlist.cpp  cl_demo.cpp  cl_demo.h  cl_download.cpp  cl_download.h  cl_game.cpp  cl_gamestatus.h  cl_http.cpp  cl_http.h  cl_level.cpp  cl_main.cpp  cl_main.h  cl_maplist.cpp  cl_maplist.h  cl_mobj.cpp  cl_netgraph.cpp  cl_netgraph.h  cl_parse.cpp  cl_parse.h  cl_pch.h  cl_pred.cpp  cl_replay.cpp  cl_replay.h  (+119 more)
client/switch/: README.md  i_switch.h  nx_io.cpp  nx_io.h  nx_system.h
client/switchnx/: README.md
client/vwii/: README.md  i_wii.cpp  i_wii.h  net_print.cpp  net_print.h
common/: CMakeLists.txt  actor.h  am_map.h  base64.cpp  base64.h  c_console.h  c_cvarlist.cpp  c_cvars.cpp  c_cvars.h  c_dispatch.cpp  c_dispatch.h  c_doc.cpp  c_effect.cpp  c_effect.h  c_level.cpp  c_level.h  c_maplist.h  c_pch.h  c_vote.cpp  c_vote.h  clc_message.cpp  clc_message.h  cmdlib.cpp  cmdlib.h  com_misc.cpp  com_misc.h  crc32.cpp  d_client.cpp  d_client.h  d_dehacked.cpp  d_dehacked.h  d_event.h  d_items.cpp  d_items.h  d_main.cpp  d_main.h  d_net.h  d_netcmd.cpp  d_netcmd.h  d_netinf.h  (+266 more)
common/network/: net_bitstream.cpp  net_bitstream.h  net_common.cpp  net_common.h  net_connection.cpp  net_connection.h  net_connectionmanager.cpp  net_connectionmanager.h  net_interface.cpp  net_interface.h  net_log.cpp  net_log.h  net_main.cpp  net_main.h  net_messagemanager.cpp  net_messagemanager.h  net_packet.cpp  net_packet.h  net_platform.h  net_socketaddress.cpp  net_socketaddress.h  net_type.h  net_upnp.cpp  net_upnp.h
common/resources/: res_cache.h  res_container.cpp  res_container.h  res_fileaccessor.h  res_filelib.cpp  res_filelib.h  res_identifier.cpp  res_identifier.h  res_main.cpp  res_main.h  res_nametranslator.cpp  res_nametranslator.h  res_resourceid.cpp  res_resourceid.h  res_resourceloader.cpp  res_resourceloader.h  res_resourcepath.h  res_texture.cpp  res_texture.h
libraries/: CMakeLists.txt  SDL-lib.cmake  curl-lib.cmake  fltk-lib.cmake  fmt-lib.cmake  jsoncpp-lib.cmake  libpng-lib.cmake  miniupnp-lib.cmake  protobuf-lib.cmake  wxWidgets-lib.cmake  zlib-lib.cmake
libraries/cryptopp/: CMakeLists.txt  Doxyfile  cryptest.nmake  cryptlib.vcxproj  cryptopp.rc  test.cpp  validat0.cpp  validat7.cpp
libraries/discord-rpc/: CMakeLists.txt  build.py  discord-rpc.lib
libraries/fmt/: run-msbuild.bat
libraries/jsoncpp/: CMakeLists.txt
libraries/libminiupnpc/: CMakeLists.txt  Makefile  miniupnpc.c  miniupnpc.h  miniupnpcstrings.h  miniwget.c  miniwget.h  receivedata.c  upnpc.c  upnpcommands.c
libraries/libpng/: CMakeLists.txt  LICENSE  README  configure  libpng.cbp  libpng.layout  png.c  png.h  pngconf.h  pngerror.c  pnglibconf.h  pngpriv.h  pngread.c  pngrtran.c  pngtest.c  pngwrite.c
libraries/nuklear/: nuklear.cpp
libraries/portmidi/: CMakeLists.txt  portmidi.sln
master/: CMakeLists.txt  i_net.cpp  i_net.h  main.cpp  master.cbp  master.dsp  odamaster.vcproj
odalaunch-fltk/: CMakeLists.txt  db.cpp  db.h  log.cpp  log.h  main.cpp  main.h  main_window.cpp  main_window.h  odalaunch.cpp  odalaunch.h  plat.cpp  plat.h  server_group.cpp  server_group.h  server_table.cpp  server_table.h  thread.cpp  thread.h  work_thread.cpp  work_thread.h
odaproto/: CMakeLists.txt  client.proto  common.proto  server.proto
server/: CMakeLists.txt
shim/: CMakeLists.txt  LICENSE
wad/: CMakeLists.txt  odamex.wad  wadinfo.txt
(+714 files in other folders)
